[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/hud/arrows.png" type="Texture" id=1]
[ext_resource path="res://basic-theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/hud/sand-clock.png" type="Texture" id=3]
[ext_resource path="res://assets/hud/pause64.png" type="Texture" id=4]
[ext_resource path="res://hud/LevelHud.gd" type="Script" id=5]
[ext_resource path="res://hud/PauseHud.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/hud/fast-forward.png" type="Texture" id=7]

[node name="LevelHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainerTimer" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 9.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 42.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainerTimer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="CanvasLayer/HBoxContainerTimer"]
margin_left = 42.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00:00"

[node name="HBoxContainerMove" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 9.0
margin_top = 56.0
margin_right = 161.0
margin_bottom = 88.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainerMove"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="MoveLabel" type="Label" parent="CanvasLayer/HBoxContainerMove"]
margin_left = 42.0
margin_top = 3.0
margin_right = 57.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 295.0
margin_top = 10.0
margin_right = 365.0
margin_bottom = 164.0
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = 20

[node name="PauseButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 64.0
theme = ExtResource( 2 )
icon = ExtResource( 4 )
icon_align = 1

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 70.0
margin_bottom = 154.0
rect_min_size = Vector2( 70, 70 )
theme = ExtResource( 2 )
icon = ExtResource( 7 )
icon_align = 1

[node name="SkipLabel" type="Label" parent="."]
visible = false
margin_left = 243.0
margin_top = 135.0
margin_right = 343.0
margin_bottom = 160.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 2 )
text = "Skip"
align = 2

[node name="PauseHud" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="CanvasLayer/VBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="exit_pressed" from="PauseHud" to="." method="_on_PauseHud_exit_pressed"]
[connection signal="resume_pressed" from="PauseHud" to="." method="_on_PauseHud_resume_pressed"]
